[gd_scene load_steps=7 format=3 uid="uid://ql7exnftci6x"]

[ext_resource type="Shader" path="res://shaders/BlurBackground.gdshader" id="1_anaqw"]
[ext_resource type="Script" path="res://scripts/menu/maplist/MapList.gd" id="1_er3sm"]
[ext_resource type="PackedScene" uid="uid://dum5do6l4u517" path="res://prefabs/maplist/SortButton.tscn" id="2_d8uf2"]
[ext_resource type="Script" path="res://scripts/menu/maplist/Filters.gd" id="3_irkgl"]
[ext_resource type="Script" path="res://scripts/menu/maplist/Maps.gd" id="5_d032g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8obuy"]
shader = ExtResource("1_anaqw")
shader_parameter/lod = 1.5

[node name="MapList" type="VBoxContainer"]
custom_minimum_size = Vector2(800, 200)
script = ExtResource("1_er3sm")

[node name="Filters" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_8obuy")
layout_mode = 2
script = ExtResource("3_irkgl")

[node name="Background" type="Panel" parent="Filters"]
layout_mode = 2

[node name="M" type="MarginContainer" parent="Filters"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Content" type="HBoxContainer" parent="Filters/M"]
layout_mode = 2

[node name="Search" type="LineEdit" parent="Filters/M/Content"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search for a map/mapper"

[node name="NameSort" parent="Filters/M/Content" instance=ExtResource("2_d8uf2")]
layout_mode = 2
text = "Name"

[node name="MapperSort" parent="Filters/M/Content" instance=ExtResource("2_d8uf2")]
layout_mode = 2
text = "Mapper"

[node name="Maps" type="PanelContainer" parent="."]
material = SubResource("ShaderMaterial_8obuy")
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("5_d032g")

[node name="Background" type="Panel" parent="Maps"]
layout_mode = 2

[node name="M" type="MarginContainer" parent="Maps"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Content" type="ScrollContainer" parent="Maps/M"]
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="M" type="MarginContainer" parent="Maps/M/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 8

[node name="G" type="GridContainer" parent="Maps/M/Content/M"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[connection signal="filters_updated" from="Filters" to="Maps" method="filter_buttons"]
[connection signal="sorts_updated" from="Filters" to="Maps" method="sort_buttons"]
[connection signal="text_changed" from="Filters/M/Content/Search" to="Filters" method="_search_text_changed"]
[connection signal="toggled" from="Filters/M/Content/NameSort" to="Filters" method="_name_sort_changed"]
[connection signal="toggled" from="Filters/M/Content/MapperSort" to="Filters" method="_mapper_sort_changed"]
[connection signal="map_selected" from="Maps" to="." method="select_map"]
